--- a/XUnit/DynamicSpecs.XUnit/DynamicSpecs.XUnit.csproj
+++ b/XUnit/DynamicSpecs.XUnit/DynamicSpecs.XUnit.csproj
@@ -1,77 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CAB1FDC4-6FDE-4664-BAE9-5CFA08EBBBF9}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DynamicSpecs.XUnit</RootNamespace>
-    <AssemblyName>DynamicSpecs.XUnit</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
+      <PackageId>DynamicSpecs.XUnit</PackageId>
+      <Description>DynamicSpecs XUnit integration</Description>
+      <Authors>Hendrik Loesch</Authors>
+      <Product>DynamicSpecs</Product>
+      <Copyright>Copyright © 2018 Hendrik Loesch</Copyright>
+      <AssemblyVersion>3.0.0.0</AssemblyVersion>
+      <FileVersion>3.0.0.0</FileVersion>
+      <Version>3.0.0</Version>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\..\DynamicSpecs.AutoFacItEasy\DynamicSpecs.AutoFacItEasy.csproj" />
+    <ProjectReference Include="..\..\DynamicSpecs.Core\DynamicSpecs.Core.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\..\Shared.AssemblyInfo.cs">
-      <Link>Properties\Shared.AssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Specifies.cs" />
-    <Compile Include="SpecifiesStatically.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\DynamicSpecs.AutoFacItEasy\DynamicSpecs.AutoFacItEasy.csproj">
-      <Project>{2788a8d5-e048-4686-ac03-6cf14425c896}</Project>
-      <Name>DynamicSpecs.AutoFacItEasy</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\DynamicSpecs.Core\DynamicSpecs.Core.csproj">
-      <Project>{2ea9d7fd-9ff7-4d44-a983-fb6bd8d960be}</Project>
-      <Name>DynamicSpecs.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
